# ortflix-telegram

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  Makefile  README.md  __init__.py  bot.py  config.py  dockerfile  models.py  payloads.py  pyproject.toml  pytest.ini  run-local.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-auto-approve.yaml  lint.yml  release.yml  security.yml
tests/: bot_test.py  conf_test.py  test_caption_messages.py  test_radarr_parse.py
